# vaccine-distribution

./: .gitignore  CMakeLists.txt  Centrum.cpp  Centrum.h  Hub.h  README.md  createVid.sh  graphic_impression.txt  main.cpp  tests_main.cpp
Simulation/: Centrum.cpp  Centrum.h  Hub.cpp  Hub.h  Vaccine.cpp  Vaccine.h  algemeen.cpp  algemeen.h  autoSim.cpp  autoSim.h  fileCompare.cpp  fileCompare.h  graphicExport.cpp  graphicExport.h  simulation.cpp  simulation.h  simulationExporter.cpp  simulationExporter.h  simulationImporter.cpp  simulationImporter.h
Simulation/tests/: autoSimTests.cpp  centrumTests.cpp  domainTests.cpp  exportTests.cpp  hubTests.cpp  importTests.cpp  simulationTests.cpp
expectedData/: badData12.txt  badData15.txt  badData2.txt  badData5.txt  badData6.txt  badData7.txt  partialData2.txt  partialData3.txt  partialData5.txt  partialData6.txt  partialData7.txt  partialData8.txt
expectedData/export/: center1.txt  center2.txt  fullIni.ini  general.txt  hub.txt  hubStock.txt  simpleGraphic1.txt  simpleGraphic2.txt  stats.txt  transport.txt  vectorSegment.txt
expectedData/import/: badData1.txt  badData10.txt  badData11.txt  badData12.txt  badData13.txt  badData14.txt  badData15.txt  badData16.txt  badData2.txt  badData3.txt  badData4.txt  badData5.txt  badData6.txt  badData8.txt  badData9.txt  partialData1.txt  partialData2.txt  partialData3.txt  partialData4.txt  partialData5.txt  partialData6.txt  partialData7.txt  partialData8.txt
testData/: badData1.xml  badData10.xml  badData11.xml  badData12.xml  badData13.xml  badData14.xml  badData15.xml  badData16.xml  badData2.xml  badData3.xml  badData4.xml  badData5.xml  badData6.xml  badData7.xml  badData8.xml  badData9.xml  data1.xml  data2.xml  data3.xml  data4.xml  partialData1.xml  partialData2.xml  partialData3.xml  partialData4.xml  partialData5.xml  partialData6.xml  partialData7.xml  partialData8.xml  throw1.xml  throw2.xml  throw3.xml  throw4.xml
testOutput/autoSim/: hub00_dag0003.ini  hub0_dag1.ini  hub0_dag2.ini  hub0_dag3.ini  out.txt
testOutput/export/: multipleHub.txt  singleHub1.txt  singleHub2.txt
tests/: autoSimTests.cpp  domainTests.cpp  exportTests.cpp  importTests.cpp
